--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,14 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-<h1>Home</h1>
-<ul>
-    <li><a href="/">Index</a></li>
-    <li><a href="/home">Home</a></li>
-    <li><a href="/form">Form</a></li>
-    <li><a href="/logout">Cerrar</a></li>
-</ul>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navbar</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="/peliculas/ninos">Childs</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/peliculas/adultos">Adults</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Familiares
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="/peliculas/comedia">Comedia</a></li>
+                        <li><a class="dropdown-item" href="/peliculas/accion">Accion</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="/peliculas/romance">romance</a></li>
+                        <li><a class="dropdown-item" href="/peliculas/terror">Terror</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form th:action="@{/logout}" method="post">
+                <button class="btn btn-dark" type="submit">Logout</button>
+            </form>
+        </div>
+    </div>
+</nav>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
 </html>
